Thu Apr 24 17:20:41 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/TestFramework/TestFramework.cpp:

          Cleaned up participant.

        * tests/DCPS/unit/Main.cpp:

          Ensured DataSampleListElements were deleted.

Thu Apr 24 14:30:28 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Priority/Publisher.cpp:
        * tests/DCPS/WaitForAck/Publisher.cpp:

          Added storing retrieved entity in a var so the reference added
          by get_entity is cleaned up.

Tue Apr 22 19:24:17 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/LargeSample/rtps.ini:

          Removed reliable, since run_test.pl passes the reliability flag.

Tue Apr 22 19:20:53 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/LargeSample/rtps.ini:

          Added reliability so subscriber will configure the Qos correctly.

Tue Apr 22 15:37:57 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * java/tests/messenger/both/Both.java:
        * java/tests/messenger/publisher/TestPublisher.java:
        * java/tests/messenger/subscriber/TestSubscriber.java:

          Added logging.

Tue Apr 22 15:27:09 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/ManualAssertLiveliness/subscriber.cpp:

          Use ERROR in output so that scoreboard detects it.

Tue Apr 22 15:13:11 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/RecorderReplayer/Publisher.cpp:
        * tests/DCPS/RecorderReplayer/Relay.cpp:
        * tests/DCPS/RecorderReplayer/Subscriber.cpp:

          Changed to create all non-participant vars in a sub-scope to
          ensure all references are cleaned up before cleaning up the
          participant and shutting down.

        * tests/DCPS/RecorderReplayer/run_test.pl:

          Fixed error statement.

Mon Apr 21 18:57:28 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Priority/run_test.pl:
