@@ -1,3 +1,10 @@
+Thu Apr 24 17:27:59 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
+
+        * tests/DCPS/TestFramework/TestFramework.cpp:
+
+          Reverted change since participant is already cleaned up
+          (still need to identify why valgrind indicates it is lost).
+
 Thu Apr 24 17:20:41 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
 
         * tests/DCPS/TestFramework/TestFramework.cpp:
